[metadata]
name = octopus-influx
version = 0.0.1
author = Andrew Marshall
author_email = andrew@algodynamic.com
description = A script for retrieving Octopus agile tariffs and persisting to InfluxDB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/planetmarshall/octopus-influx
project_urls =
    Bug Tracker = https://github.com/planetmarshall/octopus-influx/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2
    Operating System :: OS Independent

[options]
install_requires =
    influxdb-client[ciso]
    pandas
    requests
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        octopus-influx = octopus_influx:octopus_influx